# neorg-se

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  neorg-se-1.rockspec  neorg-se-scm-1.rockspec
.cargo/: config
.github/workflows/: luarocks.yml  template.rockspec
lua/: neorg_se.lua
lua/neorg_se/: init.lua
src/: lib.rs  main.rs  main.rs.bak  rpc_event_handler.rs  search_engine.rs
