[package]
name = "neorg_se"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "neorg_se"
crate-type = ["cdylib"]

[features]
luajit = ["mlua/luajit"]
lua51 = ["mlua/lua51"]

[dependencies]
anyhow = "1.0.86"
colog = "1.3.0"
dirs = "5.0.1"
ignore = "0.4.22"
log = "0.4.22"
log-panics = "2.1.0"
mlua = { version = "0.9.9", features = ["module"] }
neovim-lib = "0.6.1"
once_cell = "1.19.0"
regex = "1.10.5"
serde = "1.0.204"
serde_json = "1.0.120"
simplelog = "0.12.2"
tantivy = "0.22.0"
